# payment-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py  models.py
app/api/v1/: __init__.py  monitoring.py  wallet.py
app/config/: __init__.py  app.py  db.py  kafka.py  rabbit.py  redis.py  types.py
app/db/: __init__.py  custom_types.py  mixins.py  registry.py  transaction.py  transaction_event.py  wallet.py
app/services/: wallet.py
app/tools/: pydantic.py
migrations/: env.py
migrations/versions/: 2024_10_12_0024-53d06bc95d63.py  2025_01_02_1633-116085f8599a.py  2025_01_04_2324-780c1d7c2093.py
tests/: utils.py
tests/app/: conftest.py
tests/app/api/v1/: test_monitoring.py  test_wallet.py
tests/factories/: db.py  schemes.py
tests/fixtures/: client.py  migration.py
